
FILE(GLOB_RECURSE NAMES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*.sh)
FOREACH( NAME  ${NAMES})
  CONFIGURE_FILE(
      ${CMAKE_CURRENT_SOURCE_DIR}/${NAME}
      ${PROJECT_BINARY_DIR}/appli/${NAME}
      COPYONLY )
ENDFOREACH(NAME)


SET(EXE_NAME qtvtkviewer)
SET(${EXE_NAME}_LIBRARIES
    GUIQtViewers
    GUIQtSurfaceRenderer
    GUIQtVolumeRenderer
    GLEW
    ${VTK_LIBRARIES}
    ${QT_LIBRARIES}
)
add_executable(${EXE_NAME}   ${EXE_NAME}.cxx)
target_link_libraries(${EXE_NAME} ${${EXE_NAME}_LIBRARIES})
SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES LINKER_LANGUAGE C)
install(TARGETS ${EXE_NAME}
        RUNTIME 
        DESTINATION bin)
